compiler/actonc/test/typeerrors/actor_self_reserved_method_param2.act
actor Test():
    def ok_method(param):
        def test_method(first, self):
            pass